--- a/app/src/main/res/layout/activity_text_ocr.xml
+++ b/app/src/main/res/layout/activity_text_ocr.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<cn.vove7.jarvis.view.custom.ChildSelectableView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/rootContent"
     android:layout_width="match_parent"
-    android:background="#22000000"
     android:layout_height="match_parent"
+    android:background="#22000000"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
+
+    <cn.vove7.jarvis.view.custom.SlideFLayout
+        android:id="@+id/rootContent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:id="@+id/loading_layout"
         android:layout_width="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
 
         <ProgressBar
             style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
@@ -30,4 +34,4 @@
         android:layout_marginBottom="10dp"
         android:src="@drawable/ic_edit"
         app:elevation="5dp" />
-</cn.vove7.jarvis.view.custom.ChildSelectableView>
+</RelativeLayout>
