[屏幕识别] 支持京东识别

--- a/app/src/main/res/menu/menu_spot_action.xml
+++ b/app/src/main/res/menu/menu_spot_action.xml
@@ -3,5 +3,8 @@
     <item
         android:id="@+id/item_spot_with_taobao"
         android:title="淘宝商品识别" />
+  <item
+        android:id="@+id/item_spot_with_jd"
+        android:title="京东商品识别" />
 
 </menu>
