优化App选择器 设置启动背景

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -88,6 +88,9 @@
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
     </style>
+    <style name="Main" parent="NoActionBar">
+        <item name="android:windowBackground">@drawable/bg_splash</item>
+    </style>
 
 
     <style name="MaterialButton.White" parent="MaterialButton">
