--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/menu_search"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_search_black_24dp"
         android:title="@string/text_search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="collapseActionView|always" />
