- 适配Dark主题（自动跟随系统夜间模式） - 优化语音识别处于引擎忙状态

--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:text="@string/desc_new_account"
         android:gravity="center_horizontal"
-        android:textColor="?attr/colorPrimary" />
+        android:textColor="?attr/colorAccent" />
 
 
 </LinearLayout>
