--- a/app/src/main/res/layout/item_of_permission_list.xml
+++ b/app/src/main/res/layout/item_of_permission_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
@@ -12,30 +13,33 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical"
         android:gravity="center_vertical"
+        android:orientation="vertical"
         android:padding="10dp">
 
-        <TextView
+        <CheckedTextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/primary_text"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="@color/permission_title"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            tools:text="位置信息" />
 
-        <TextView
+        <CheckedTextView
             android:id="@+id/subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/secondary_text"
-            android:textSize="12sp" />
+            android:textColor="?attr/secondary_text_color"
+            android:textSize="12sp"
+            tools:text="位置信息" />
     </LinearLayout>
 
-    <TextView
+    <CheckedTextView
         android:id="@+id/open"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
+        android:textColor="@color/permission_button"
         android:textStyle="bold" />
 </LinearLayout>
