--- a/app/src/main/res/drawable-xxhdpi/bg_splash.xml
+++ b/app/src/main/res/drawable-xxhdpi/bg_splash.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@android:color/white" />
+    <item android:drawable="?attr/app_background" />
 
     <item>
         <bitmap
