--- a/app/src/main/res/layout/activity_base_view_pager.xml
+++ b/app/src/main/res/layout/activity_base_view_pager.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:layout_collapseMode="parallax"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:popupTheme="?attr/popupMenuStyle"
             app:titleMarginTop="15dp" />
         <!--app:layout_scrollFlags="scroll|enterAlways"-->
 
