--- a/app/src/main/res/layout/activity_inst_detail.xml
+++ b/app/src/main/res/layout/activity_inst_detail.xml
@@ -34,7 +34,6 @@
                 app:layout_collapseMode="pin"
                 app:layout_scrollFlags="scroll"
                 app:navigationIcon="@drawable/ic_close_white_24dp"
-                app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
                 app:title=""
                 app:titleTextColor="#fff" />
 
@@ -48,7 +47,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
