--- a/app/src/main/res/layout/basic_setting_item.xml
+++ b/app/src/main/res/layout/basic_setting_item.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="?attr/app_foreground"
     android:gravity="center_vertical"
     android:minHeight="48dp"
     android:orientation="vertical"
@@ -13,9 +14,9 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lua测试"
         android:fontFamily="monospace"
-        android:textColor="@color/primary_text"
+        android:text="Lua测试"
+        android:textColor="?attr/primary_text_color"
         android:textSize="16sp" />
 
     <TextView
