--- a/app/src/main/res/layout/header_help.xml
+++ b/app/src/main/res/layout/header_help.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:textColor="@color/primary_text"
+        android:textColor="?attr/primary_text_color"
         android:textSize="16sp" />
 
 </LinearLayout>
