--- a/app/src/main/res/layout/item_of_settings_child.xml
+++ b/app/src/main/res/layout/item_of_settings_child.xml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/app_foreground"
-    android:minHeight="48dp"
-    android:orientation="horizontal">
+    android:background="?attr/app_foreground"
+    android:foreground="?attr/selectableItemBackground"
+    android:minHeight="48dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?attr/selectableItemBackground">
+    <include layout="@layout/basic_setting_item" />
 
-
-        <include layout="@layout/basic_setting_item" />
-
-    </LinearLayout>
-</LinearLayout>
+</FrameLayout>
