--- a/app/src/main/res/layout/item_of_settings_switch.xml
+++ b/app/src/main/res/layout/item_of_settings_switch.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/app_foreground"
+    android:background="?attr/app_foreground"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="monospace"
                 android:text="Lua测试"
-                android:textColor="@color/primary_text"
+                android:textColor="?attr/primary_text_color"
                 android:textSize="16sp" />
 
             <TextView
