--- a/app/src/main/res/layout/item_whit_icon_title.xml
+++ b/app/src/main/res/layout/item_whit_icon_title.xml
@@ -1,19 +1,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="20dp"
-    android:paddingEnd="20dp"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
+    android:background="?attr/selectableItemBackground"
     android:gravity="center_vertical"
     android:minHeight="50dp"
-    android:background="?attr/selectableItemBackground"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingStart="20dp"
+    android:paddingTop="10dp"
+    android:paddingEnd="20dp"
+    android:paddingBottom="10dp">
 
-    <cn.vove7.jarvis.view.custom.IconView
+    <ImageView
         android:id="@+id/icon"
         android:layout_width="24dp"
-        android:layout_height="24dp" />
+        android:layout_height="24dp"
+        android:tint="?attr/primary_text_color"
+        tools:src="@drawable/ic_accessibility" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -26,14 +29,16 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/primary_text"
-            android:textSize="16sp" />
+            android:textColor="?attr/primary_text_color"
+            android:textSize="16sp"
+            tools:text="标题" />
 
         <TextView
             android:id="@+id/sub_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/secondary_text"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            tools:text="标题" />
     </LinearLayout>
 </LinearLayout>
