--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
     <color name="app_background">#f4f4f4</color>
-    <color name="app_dark_background">#1e1e1e</color>
+    <color name="app_dark_background">#0D293E</color>
     <color name="app_foreground">#606060</color>
     <color name="app_dark_foreground">#303030</color>
 
