--- a/app/src/main/res/layout/float_panel_google.xml
+++ b/app/src/main/res/layout/float_panel_google.xml
@@ -3,7 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:background="@drawable/toolbar_round_bg"
+    android:background="@drawable/bg_google_panel"
     android:gravity="center_horizontal"
     android:minWidth="450dp"
     android:orientation="vertical">
@@ -24,7 +24,7 @@
         android:gravity="center"
         android:minWidth="30dp"
         android:text="@string/admin_desc"
-        android:textColor="#000"
+        android:textColor="?attr/primary_text_color"
         android:textSize="14sp"
         android:textStyle="bold"
         android:typeface="monospace" />
