--- a/app/src/main/res/drawable/bg_screen_text_high_light_no_radius.xml
+++ b/app/src/main/res/drawable/bg_screen_text_high_light_no_radius.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!--标记文字-->
-    <item android:state_checked="false" android:state_pressed="false">
+    <item android:state_selected="false" android:state_pressed="false">
         <shape>
             <stroke android:width="1.5dp" android:color="@color/green_700" />
         </shape>
     </item>
-    <item android:state_checked="false" android:state_pressed="true">
+    <item android:state_selected="false" android:state_pressed="true">
         <shape>
             <solid android:color="#80388E3C" />
         </shape>
     </item>
     <!--翻译过-->
-    <item android:state_checked="true" android:state_pressed="false">
+    <item android:state_selected="true" android:state_pressed="false">
         <shape android:layout_width="wrap_content">
             <solid android:color="#80388E3C" />
             <!--<solid android:color="#A631EB38" />-->
         </shape>
     </item>
-    <item android:state_checked="true" android:state_pressed="true">
+    <item android:state_selected="true" android:state_pressed="true">
         <shape>
             <solid android:color="#80388E3C" />
         </shape>
