--- a/app/src/main/res/drawable/pickable_bg.xml
+++ b/app/src/main/res/drawable/pickable_bg.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true">
+    <item android:state_selected="true">
         <shape>
             <solid android:color="@color/google_blue" />
             <corners android:radius="5dp" />
         </shape>
     </item>
-    <item android:state_checked="false">
+    <item android:state_selected="false">
         <shape>
             <solid android:color="#E7E7E7" />
             <corners android:radius="5dp" />
