--- a/app/src/main/res/layout/item_of_permission_list.xml
+++ b/app/src/main/res/layout/item_of_permission_list.xml
@@ -7,7 +7,9 @@
     android:elevation="6dp"
     android:gravity="center_vertical"
     android:minHeight="50dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp">
 
     <LinearLayout
         android:layout_width="0dp"
